<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_gradient_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tomapple_2x" />

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebasneue"
        android:gravity="top"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="75dp"
        android:paddingRight="75dp">

        <TextView
            android:id="@+id/indicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bebasneue"
            android:text="@string/inicia_sesion_indicacion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/entrada_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/manroperegular"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_alignSelf="center" />

        <EditText
            android:id="@+id/entrada_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/manroperegular"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_alignSelf="center" />

        <Button
            android:id="@+id/iniciar_sesion"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/bebasneue"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/iniciar_sesion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="34sp"
            app:cornerRadius="25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/olvide_contraseña"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/manroperegular"
        android:text="@string/olvide_contraseña"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_alignSelf="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/manroperegular"
        android:text="@string/bando_alimentos_info"
        android:textAlignment="center"
        android:textColor="@color/white" />

</LinearLayout>