<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_gradient_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/titulos_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:gravity="center"
            android:text="@string/titulo_operador_nota_recoleccion"
            android:textColor="@color/white"
            android:textColorLink="@color/verde"
            android:textSize="34sp"
            app:layout_alignSelf="center" />

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp" />

        <LinearLayout
            android:id="@+id/notaRecoleccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border_card"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/linea_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/errores_operador_nota_recoleccion"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/linea_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/manropebold"
                android:gravity="center"
                android:text="@string/nota_operador_nota_recoleccion"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtFolioNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/folio__"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtFechaNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtResponsableNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/recibio_operadro_nota_recoleccion"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtDonadorNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/manropebold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtAbarroteNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/abarrote"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtFrutaVerduraNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/fruta_verdura"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtPanNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/pan"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtNoComestibleNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:gravity="center"
                android:text="@string/no_comestible"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <Button
                android:id="@+id/boton_continuar_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue"
                android:text="@string/continuar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                app:cornerRadius="25dp"
                app:layout_alignSelf="center" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>