<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border_card"
    android:padding="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/operador_nombre_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:textColor="@color/black"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/operador_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:text="@string/operador_receptor_card"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/operador_unidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:text="@string/unidad_receptor_card"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtAbarroteNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manropebold"
                android:text="@string/abarrote_kg"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFrutaVerduraNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manropebold"
                android:text="@string/fruta_verdura_kg"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPanNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manropebold"
                android:text="@string/pan_kg"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtNoComestibleNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manropebold"
                android:text="@string/no_comestible_kg"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
