<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/orange_gradient_bg"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulos_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/titulo_receptor_recepcion_formulario"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_alignSelf="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_card"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/titulos_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/bebasneue"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtUsuarioOperador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/manropebold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

            <TextView
                android:id="@+id/txtUnidadOperador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/manropebold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_alignSelf="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAbarroteRecepcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue"
                android:text="@string/abarrote"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtFrutaVerduraRecepcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue"
                android:text="@string/fruta_verdura"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtPanRecepcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue"
                android:text="@string/pan"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtNoComestibleRecepcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue"
                android:text="@string/no_comestible"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/boton_modificar_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C54507"
        android:fontFamily="@font/bebasneue"
        android:text="@string/modificar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        app:cornerRadius="25dp"
        app:layout_alignSelf="center" />

    <Button
        android:id="@+id/boton_confirmar_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebasneue"
        android:text="@string/confirmar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        app:cornerRadius="25dp"
        app:layout_alignSelf="center" />
</LinearLayout>