<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/orange_gradient_bg"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulos_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue"
                android:text="@string/titulo_receptor_recepcion_modificar"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_alignSelf="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="45dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abarrote"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bebasneue"
                    android:textSize="24sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/campo_abarrote"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/cero"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:textColor="@color/black"
                        android:fontFamily="@font/bebasneue"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fruta_verdura"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bebasneue"
                    android:textSize="24sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/campo_fruta_verdura"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/cero"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:textColor="@color/black"
                        android:fontFamily="@font/bebasneue"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pan"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bebasneue"
                    android:textSize="24sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/campo_pan"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/cero"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:textColor="@color/black"
                        android:fontFamily="@font/bebasneue"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_comestible"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bebasneue"
                    android:textSize="24sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/campo_no_comestible"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/cero"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:textColor="@color/black"
                        android:fontFamily="@font/bebasneue"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/boton_confirmar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            app:layout_alignSelf="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="@font/bebasneue"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:cornerRadius="25dp"
            android:backgroundTint="#CCFFE0"
            style="?buttonBarButtonStyle"/>
        <Button
            android:id="@+id/boton_cancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            app:layout_alignSelf="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="@font/bebasneue"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:cornerRadius="25dp"
            android:backgroundTint="#FBD0D7"
            android:layout_marginStart="10dp"
            style="?buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>